# final-project-stopfuckingspiders

./: .gitignore  Homeworkweek9.py  README.md  config.py  config.yaml  environment.yml  main.py  optimal.py  pylint_report.txt  pyproject.toml  requirements.txt  test.py
WindTurbineModeling/: __init__.py  equations.py  load.py  main.py  plot.py  plot_turbine.py  read.py  read_data.py
examples/: BEM_workflow.drawio  main.py  simpleWorkflow.drawio
outputs/: plot_output.py
results/: baseline_performance.csv  elemental_data.csv  elemental_data.h5  elemental_data_10.0mps.csv  elemental_data_10.5mps.csv  elemental_data_10.7mps.csv  elemental_data_11.0mps.csv  elemental_data_13.0mps.csv  elemental_data_15.0mps.csv  elemental_data_17.0mps.csv  elemental_data_19.0mps.csv  elemental_data_21.0mps.csv  elemental_data_23.0mps.csv  elemental_data_25.0mps.csv  elemental_data_3.0mps.csv  elemental_data_5.0mps.csv  elemental_data_7.0mps.csv  elemental_data_8.0mps.csv  elemental_data_9.0mps.csv  optimal_elemental_data.csv  optimal_performance.csv  optimal_performance_summary.csv
results/airfoils/: airfoil_1.csv  airfoil_10.csv  airfoil_11.csv  airfoil_12.csv  airfoil_13.csv  airfoil_14.csv  airfoil_15.csv  airfoil_16.csv  airfoil_17.csv  airfoil_18.csv  airfoil_19.csv  airfoil_2.csv  airfoil_20.csv  airfoil_21.csv  airfoil_22.csv  airfoil_23.csv  airfoil_24.csv  airfoil_25.csv  airfoil_26.csv  airfoil_27.csv  airfoil_28.csv  (+29 more)
src/: __init__.py
tests/: test_bem_solvers.py  test_config.py  test_equations.py  test_interactive.py  test_load.py  test_plot.py  test_read.py  validating.py
(+10 files in other folders)
