[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "WindTurbineModeling"
version = "0.1.0"
description = "Blade Element Momentum (BEM) based wind turbine performance modeling"
authors = [{ name = "Hannah, Dorian, Lenssa" }]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "scipy",
    "python-dotenv",
    "PyYAML"
]

[tool.hatch.build]
packages = ["src/WindTurbineModeling"]
